// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders a variety of strings correctly empty string 1`] = `
<DocumentFragment>
  <a
    href=""
  >
    Empty string
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external URL 1`] = `
<DocumentFragment>
  <a
    href="http://mongodb.com"
  >
    MongoDB Company
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly identfies mailto links as external urls 1`] = `
<DocumentFragment>
  <a
    href="mailto:docs@mongodb.com"
  >
    docs@mongodb.com
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/c/"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link query param 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/ruby/?site=drivers"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link that already includes trailing slash 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/nodejs/#installation"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link with hash 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/pymongo/#installation"
  >
    C Driver
  </a>
</DocumentFragment>
`;
